<resources>
    <string name="app_name">Ahaspora</string>


    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="jobs">Jobs</string>
    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="recommendations">Recommendations</string>
    <string name="messages">Messages</string>
    <string name="posts">Post</string>

     <string name="pleaseEnablePermission">Permission is needed for the app to work properly.</string>



    <string name="payments">Payments</string>
    <string name="starred">Favorites</string>
    <string name="search">Search</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="dummy_text_1">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. </string>

    <string name="dummy_text_2">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him</string>
    <string name="long_text">Genser Energy Inc. is an Independent Power Producer (IPP) based in the British Virgin Islands with operations in Africa. It specializes in providing custom engineered turn-key distributed generation energy solutions for clients in the mining, manufacturing, and utilities. Genser engages in engineering, procurement and construction (EPC) as well as operation and maintenance of its power generation plants and sells electricity and/or steam to clients. Each project is financed and owned by a country-level subsidiary in Africa.</string>


    <string name="job1">Genser Energy Inc. is an Independent Power Producer (IPP) based in the British Virgin Islands with operations in Africa. It specializes in providing custom engineered turn-key distributed generation energy solutions for clients in the mining, manufacturing, and utilities. Genser engages in engineering, procurement and construction (EPC) as well as operation and maintenance of its power generation plants and sells electricity and/or steam to clients. Each project is financed and owned by a country-level subsidiary in Africa.</string>
    <string name="job2">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure? On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure? On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain.</string>

    <string name="job3">We are selecting a founding team of entrepreneurs to lead a solar energy startup based in Accra. Do you have what it takes? Learn more about the opportunity here: sunfarmer.org/sunfarmer-ghana-founding-entrepreneur.</string>
    <string name="job4">We are presently searching for a mature and experienced chef to join our cosy establishment. Candidates must preferably be from 40yrs of age plus</string>
    <string name="job5">Creative Minds Learning Center, Ghana (CMLCgh) is a social tech start up which aims at nurturing the creative and artistic skills in youngsters between the ages of 4 and 18 years in the urbanised parts of Accra.</string>

    <string name="job6">Junior Achievement (JA) is the largest global, nonprofit organization dedicated to empowering young people to own their economic success by enhancing the relevance of education. JA programs focus on the core content areas of financial literacy, work readiness and entrepreneurship and provide experiential learning opportunities for young people to prepare for their professional lives in the 21st century. JA has impacted the lives of more than 125 million youth around the world. Last year over 10 million young people in over 120 countries were involved in JA programs. In 1955, JA began to spread its innovative program delivery philosophy to countries outside of the United States and the demand for JA programs continues to grow around the world. Core content around financial literacy, work readiness and entrepreneurship has never been more relevant. As the world’s largest organization dedicated to educating youth through experiential, hands-on programs, we are uniquely qualified to meet this growing demand. Through our programs, we prepare young people for the real world by showing them how to generate wealth and effectively manage it, how to create jobs which make their communities more robust and how to apply entrepreneurial thinking to the workplace. Participants put these lessons into action and learn the value of contributing to their communities.

</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="settings">Settings</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string-array name="job_tags">
        <item>All categories</item>
        <item>Full-time</item>
        <item>Part-time</item>
        <item>Freelance</item>
        <item>Internship</item>
        <item>Temporary</item>
     </string-array>


    <string-array name="recommendation_tags">
        <item>All categories</item>
        <item>Advertising</item>
        <item>Arts &amp; Culture</item>
        <item>Clothing</item>
        <item>Craftsmen</item>
        <item>Education</item>
        <item>Finance</item>
        <item>Fitness</item>
        <item>Food</item>
        <item>Grooming</item>
        <item>Health Care</item>
        <item>House Keeping &amp; Childcare</item>
        <item>HR</item>
        <item>Information Technology</item>
        <item>Legal</item>
        <item>Merchandise</item>
        <item>Photography/Videography</item>
        <item>Real Estate</item>
        <item>Services</item>
        <item>Transportation</item>
        <item>Travel</item>
    </string-array>
</resources>
